--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
 
   <body>
+  <h1>Quiz</h1>
+  <section>
     <div class="container">
       <div id="question-container" class="hide">
         <div id="questions">Questions</div>
@@ -21,7 +23,7 @@
         <button id="next-btn" class="next-btn btn hide">Next</button>
       </div>
     </div>
-
+  </section>
     <script src="src/index.js"></script>
   </body>
 </html>
